Revision history for Perl extension IPC::Run

0.87 Mon 29 Mar 2010
  - Add doc type fixes - RT 56030 from carnil (Debian)
  - Remove reccommends for AUTHOR only modules

0.86 Wed 24 Mar 2010
  - Add all files to subversion for easier releases
  - bump version on ALL files to 86

0.85 Mon 22 Mar 2010
  - Remove use UNIVERSAL. - RT 51509
  - fix pod for Win32Helper - RT 51695
  - Better PATHEXT logic bug if cmd_name contains periods - RT 50739
  - Enhance tests for run.t for better diagnostics - RT 47630

0.84 Mon 13 Jul 2009
	- Add darwin to the list of known-bad platforms

0.83 Fri 10 Jul 2009
	- Switch from command.com to cmd.exe so we work on 2008 or newer.

0.82 Thu 18 Dec 2008
	- Moving changes in 0.81_01 to a production release

0.81_01 Wed 15 Oct 2008
	- This is the first in a series of refactoring test releases.
	- Removed Makefile.PL message noisily asking users to do CPAN Testers
	  dirty work.
	- Simplfied the Makefile.PL code a little.
	- Upgraded all tests to Test::More
	- Added a $VERSION for all modules
	- Adding some missing POD sections
	- Various other clean ups

0.80 (missing)
	- IPC::Run::IO now retries on certain "temporarily unavailable" errors.
	  This should fix several reported issues with t/run.t, test 69.
	  Many thanks to < Eric (at) Scratch Computing (.com) > for the patch!
	- Applied documentation patch from RT.
	- Fixed documentation to work with '<' redirect

0.79 Wed Jan 19 15:39:00 PST 2005
	- New maintainer: Richard Soderberg <rsod@cpan.org>
	- Resolved several RT tickets
	  (4934, 8263, 8060, 8400, 8624, 5870, 4658, 8940, 1474, 4311)
	- Skip certain tests on AIX and OpenBSD as they deadlock otherwise
	- Applied AIX patch from ActiveState (#8263)
	- Fixed t/run.t on OS X (#8940)
	- Add check for EINTR to _read (#5870)
	- FreeBSD uses fds up to 4 by default, fixed tests to start at 5 (#8060)

0.78 Tue Mar  9 01:49:25 EST 2004
	- Removed all psuedohashes
	- Require Win32::Process when on Win32 (<CORION a t cpan . org>)